fix carrusel on mobile

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -357,10 +357,10 @@
     margin: 0;
     border-right: 0.15em solid orange;
     font-family: "Courier";
-    font-size: 18px;
+    font-size: 1.5rem;
     white-space: nowrap;
     overflow: hidden;
-    color: orange;
+    color: rgba(202, 61, 21, 1);
     font-weight: 600;
   }
 }
